syntax = "proto3"; //声明proto的版本 只能 是3，才支持 gRPC
//声明 包名
package helloworld;

//声明gRPC服务
service AllStreamServer {
    // 双向推送流
    rpc AllStream (stream AllStreamReq) returns (stream AllStreamResp) {
    }
}

//stream 请求结构
message AllStreamReq {
    string data = 1;
}
//stream 返回结构
message AllStreamResp {
    string data = 1;
}